Fix BXEGS-895 "In Overview, word in address breaks in middle of word"

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -461,10 +461,6 @@ a.add-item-link {
     word-wrap: break-word;
 }
 
-.addr-text {
-    word-wrap: break-word;
-}
-
 input.hasMultiCalendarPicker.pi-date-input + span.calendar-img{
     font-family: 'BannerIcon';
     font-style: normal;
